# ompsnn

./: CMakeLists.txt  LICENSE  README.md  setup.py  snn  snn.cpp  snn.cu  snn_omp.cpp  test
examples/: example.cpp  example1.cpp  example2.cpp
include/: snn.h  snn_omp.h
pytest/: snntest.py
src/: snn.h  snn_omp.h
